--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-seo": "^6.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "sharp": "^0.33.5",
     "styled-jsx-plugin-postcss": "^4.0.1"
   },
@@ -26,6 +27,7 @@
     "@next/bundle-analyzer": "^14.1.0",
     "@types/node": "^20.11.10",
     "@types/react": "^18.2.48",
+    "@types/react-icons": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "autoprefixer": "^10.4.17",
